Creation of Dtos for input/output, changes in openapi and declaring the routes
